# hb-irt

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/hb_irt/: __init__.py  bloom.py  calibration.py  information.py  quadrature.py  scoring.py  types.py
src/hb_irt/bayes/: estimation.py  sequential.py
src/hb_irt/models/: base.py  crm.py  factory.py  grm.py  threepl.py
src/hb_irt/msat/: module_bank.py  selection.py  stopping.py
tests/: test_bloom.py  test_calibration.py  test_information.py  test_quadrature.py  test_scoring.py  test_types.py
tests/bayes/: test_estimation.py  test_sequential.py
tests/models/: test_base.py  test_crm.py  test_factory.py  test_grm.py  test_threepl.py
tests/msat/: test_module_bank.py  test_selection.py  test_stopping.py
